--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Azard Todo App</title>
+    <title>Simple Todo App</title>
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
